<resources>
    <string name="app_name">CSPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home">首页</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="scan">扫描</string>
    <string name="about">关于</string>

    <string name="tip">提示</string>
    <string name="warn">警告</string>

    <string name="no_permission">没有权限部分功能将无法使用。</string>
    <string name="time_zero">00:00</string>
    <string name="list_music">音乐列表</string>
</resources>